# trc_ws

./: README.md
interfaces/: CMakeLists.txt  package.xml
interfaces/msg/: ControlFootprint.msg
interfaces/srv/: TimerControl.srv
maze_solving/: CMakeLists.txt  package.xml
maze_solving/config/: mapper_params_online_async.yaml  slam_toolbox_config.yaml  tekbot_nav2.yaml
maze_solving/launch/: empty_world.launch.py  gazebo.launch.py  mapping_with_slam_toolbox.launch.py  maze_3_6x6.launch.py  navigation2.launch.py
maze_solving/maps/: maze_3_6x6.pgm  maze_3_6x6.yaml  mymaze_0.05.pgm  mymaze_0.05.yaml
maze_solving/maze_solving/scripts/: wall_follower.py
maze_solving/models/maze_3_6x6/: model.config  model.sdf
maze_solving/worlds/: maze_3_6x6.world  model.config
rosmaster_ws/x3_description/launch/: x3_description.launch.py  x3_gazebo.launch.py
rosmaster_ws/x3_description/urdf/sensors/: rgbd_camera.urdf.xacro
tekbot_control/: CMakeLists.txt  package.xml
tekbot_control/config/: localization.yaml  teleop_mactech.yaml
tekbot_control/launch/: ekf_localization.launch.py  tekbot_teleop_joy.launch.py
tekbot_description/: CMakeLists.txt  package.xml
tekbot_description/launch/: description.launch.py  gazebo.launch.py  rviz.launch.py
tekbot_description/rviz/: tekbot_des.rviz
tekbot_description/src/: timer_control.cpp
tekbot_description/srv/: TimerControl.srv
tekbot_description/urdf/: cylinder.urdf.xacro  tekbot.urdf  wheel.urdf.xacro
timer_control/: CMakeLists.txt  package.xml
timer_control/timer_control/scripts/: timer_control.py
